tests/type_errors/unused_var.xs
fn foo() {
    let unused_thing = 42
    println("no use of unused_thing")
}
foo()
